# ECOTE-lab

./: .gitignore  README.md  code_gen.py  compiler.py  main.py  models.py  parser.py  pyproject.toml  reader.py  scanner.py  semantic_analyser.py  settings.py  writer.py
.github/workflows/: pytest.yml  python-app.yml  ruff.yml
compiler/: README.md  main.py  pyproject.toml
compiler/src/compiler/: code_gen.py  default.py  errors.py  inter_code_gen.py  models.py  parser.py  reader.py  scanner.py  semantic_analyser.py  semantic_analyzer.py  settings.py  writer.py
compiler/tests/: test_code_gen.py  test_default.py  test_inter_code_gen.py  test_models.py  test_parser.py  test_reader.py  test_scanner.py  test_semantic_analyser.py  test_semantic_analyzer.py  test_writer.py
doc/: .~lock.ECOTE_Project_KrzysztofWatras.doc#  ECOTE_Project_KrzysztofWatras.doc  Report.md
examples/: example1.xml  example10.xml  example11-fail.xml  example2.xml  example3.xml  example4.xml  example6-fail.xml  example7-fail.xml  example8.xml  example9-fail.xml
tests/: conftest.py  test_code_gen.py  test_default.py  test_models.py  test_reader.py  test_settings.py  test_writer.py
