[project]
name = "ecote-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "compiler",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
]

[tool.uv.sources]
compiler = { path = "compiler", editable = true }

[tool.ruff]
builtins = ["_"]
target-version = "py312"
extend-exclude = [
    '.git',
    '__pycache__',
    'build',
    'dist',
    '.venv',
    'venv',
    '.tox',
    '.mypy_cache',
    '.pytest_cache',
    '*/migrations',
    '*/dev-tools',
]
line-length = 120

[tool.ruff.format]
quote-style = "single"
